src/objects/c2g__TaxCache__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>c2g__ChildTaxCode1__c</fullName>
        <label>Child Tax Code 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ChildTaxCode2__c</fullName>
        <label>Child Tax Code 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Date100__c</fullName>
        <label>Date100</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Date101__c</fullName>
        <label>Date101</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Date102__c</fullName>
        <label>Date102</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__GLAId__c</fullName>
        <label>GLAId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__IsParent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsParent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__LastIndex__c</fullName>
        <label>LastIndex</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Rate100__c</fullName>
        <label>Rate100</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Rate101__c</fullName>
        <label>Rate101</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Rate102__c</fullName>
        <label>Rate102</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCodeName__c</fullName>
        <label>TaxCodeName</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TaxGroup__c</fullName>
        <label>TaxGroup</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TaxModel__c</fullName>
        <description>Tax Model</description>
        <label>Tax Model</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>TaxCache</label>
</CustomObject>